# NextBench

./: .gitignore  README.md  eval.py  pyproject.toml
src/nextbench.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/nextbench/benchmarks/: __init__.py
src/nextbench/clients/: __init__.py  base.py  base_client.py  openai_client.py
src/nextbench/configs/: config_registry.py  models.yaml  scenarios.yaml
src/nextbench/scenarios/: __init__.py  base.py  base_scenario.py  gpqa_diamond.py  livecodebench.py  math500.py  mmlu_pro.py
src/nextbench/utils/: __init__.py  cacher.py  core_types.py  parsers.py
tests/: test_base_client.py
