[project]
name = "nextbench"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "diskcache>=5.6.3",
    "fastapi>=0.115.8",
    "litellm>=1.55.3",
    "openai>=1.58.1",
    "pydantic>=2.10.3",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "python-dotenv>=1.0.1",
    "tenacity>=9.0.0",
    "typer>=0.15.1",
    "uvicorn>=0.34.0",
    "wandb>=0.19.1",
    "weave>=0.51.25",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "datasets>=3.2.0",
    "ipykernel>=6.29.5",
    "isort>=6.0.0",
    "mypy>=1.15.0",
    "pre-commit>=4.1.0",
    "ruff>=0.9.6",
]
